--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/9izOIqwKQw8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  
  <iframe width="560" height="315" src="https://www.youtube.com/embed/-PC_ABzhgJw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <h2>REDZONE CREATION OFFICIAL </h2>
+  <h2>REDZONE CREATION </h2>
   <a href="https://youtube.com/channel/UC0wPzcRxqbEwGHB32nCicrg"><button>SUBSCRIBE</button> </a> 
  <style>
    button {
     color: greenyellow;
-     background: red;
+     background: green;
    }
  </style>
            <!-- Project -->
   <script src="main.js"></script>
 <a href="about.html"><button>ABOUT US</button> </a>
-<a href="index1.html"><button>DOWNLOAD APP </button> </a>
-<a href="index2.html"><button>RED SNAKE </button> </a>
+<a href="index1.html"><button> EVENTS </button> </a>
+<a href=""><button>RED SNAKE </button> </a>
 <a href="index3.html"><button>RED LUDO </button> </a> 
 <a href="index4.html"><button>SIGN UP</button</a>
   </body>
