--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
            <!-- Project -->
   <script src="main.js"></script>
 <a href="about.html"><button>ABOUT US</button> </a>
-<a href="index1.html"><button> EVENTS </button> </a>
-<a href=""><button>RED SNAKE </button> </a>
+<a href=""><button> EVENTS </button> </a>
+<a href="index2.html"><button>RED SNAKE </button> </a>
 <a href="index3.html"><button>RED LUDO </button> </a> 
 <a href="index4.html"><button>SIGN UP</button</a>
   </body>
