--- a/index4.html
+++ b/index4.html
@@ -72,7 +72,7 @@
                                         </div>
                                         <div class="form-group">
                                             <input type="password" name="KEY" class="form-control" placeholder="ENTER RED KEY *" value="" required=""/>
-                                            <input type="text" name="REFERAL" class="form-control" placeholder="HAVE A REFERAL CODE" value="" />
+                                  <input type="text" name="REFERAL" class="form-control" placeholder="HAVE A REFERAL CODE *" value=""/>
                                             
                                         </div>
                                         <div class="form-group">
