--- a/index3.html
+++ b/index3.html
@@ -4,11 +4,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Advanced Ludo Game</title>
+  <title>Red Ludo </title>
 
   <!-- Importing CSS file -->
-  <link rel="stylesheet" href="src/reset.css">
-  <link rel="stylesheet" href="src/style.css">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- To solve chrome error: failed to load favicon.ico -->
   <link rel="shortcut icon" href="#">
@@ -22,7 +22,7 @@
   <div id="start-page">
     <div id="fill-details">
       <div id="logo">
-        <img src="./images/dice.png" class="dice_image" alt="Dice Image">
+        <img src="dice.png" class="dice_image" alt="Dice Image">
       </div>
 
       <!-- Choose either human or computer -->
@@ -78,7 +78,7 @@
       <br>
       <hr>
       <div id="footer">
-        Made by Ishwar Gautam (using JavaScript)
+        Made by Prabesh Jung Basnet (using JavaScript)
       </div>
     </div>
 
@@ -345,18 +345,17 @@
       <div id = "crown-image"></div>
       <div id = "winner-color"></div>
       <div id = "final-message">I hope you enjoy the game a lot!</div><br>
-      <a href="https://ishwargautam.github.io/Advanced-Ludo-Game/" id = "restart-button">Restart</a>
-    </div>
+          </div>
 
   </div>
   
   <!-- Importing JS files -->
-  <script src="src/intermediator.js"></script>
-  <script src="src/style.js"></script>
-  <script src="src/utils.js"></script>
-  <script src="src/ludo.js"></script>
-  <script src="src/callAI.js"></script>
-  <script src="src/moveToken.js"></script>
+  <script src="intermediator.js"></script>
+  <script src="style.js"></script>
+  <script src="utils.js"></script>
+  <script src="ludo.js"></script>
+  <script src="callAI.js"></script>
+  <script src="moveToken.js"></script>
   <style>body{
 
   /* background: #212329; */
