--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 <body background="logo.jpg">
   <h1><a href="mailto:redzonecreationofficial@gmail.com"><button><font size="15">E MAIL</button></a></h1>
-  <h3><a href="https://instagram.com/redzone_creation">  <button><font size="15">INSTAGRAM</button></a></h3>
+  <h3><a href="https://instagram.com/redzone_creation98">  <button><font size="15">INSTAGRAM</button></a></h3>
   <p><font size="5">R E D Z O N E ㅤC R E A T I O N ㅤㅤO F F I C I A L</p>
   <h2><a href="https://www.facebook.com/GyanPrabesh.yt777"><button><font size="15">FACEBOOK</button></a></h2>
   <h4><a href="https://youtube.com/channel/UC0wPzcRxqbEwGHB32nCicrg"><button><font size="15">YOUTUBE</button></a></h4>
